packages/rspack/tests/diagnostics/parse-failed/stats.err
PublicPath: (none)
asset main.js 1.16 KiB [emitted] (name: main)
Entrypoint main 1.16 KiB = main.js
./index.js

ERROR in ./index.js ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error
         ╭─[1:1]
       1 │ function add(a: number, b: number): number {
         ·               ┬
         ·               ╰── Expected ',', got ':'
       2 │     return a + b;
       3 │ }
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

Rspack compiled with 1 error (c25b2e90a72c5e9b4a41)